# -django-ninja-demo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
demo/bug/: views.py
demo/demo/: settings.py  urls.py
