[tool.poetry]
name = "django-ninja-demo"
version = "0.1.0"
description = ""
authors = ["valbendan <valbendan@hotmail.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = false

[tool.poetry.dependencies]
python = "^3.9"

django = ">=3.1,<3.2"
django-ninja  = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
